--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=eventmaster
+DB_DATABASE=EventMaster
 DB_USERNAME=postgres
 DB_PASSWORD=admin
 
